<resources>
    <string name="app_name">Flow Scan</string>
    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ic_arabic">عربي</string>
    <string name="ic_english">English</string>
    <string name="loginSucceeded">Login successfully</string>
    <string name="loginFailed">Invalid credentials. Please re-write your username and password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan">Scan</string>
    <string name="import_data">Import Data</string>
    <string name="delete_all">Delete All</string>
    <string name="data_display">Data Display</string>
    <string name="scan_barcode">Scan BarCode</string>
    <string name="logout">LogOut</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="deleteAllDialog">Delete All Data</string>
    <string name="confirmDeleteDialog">Are you sure you want to delete all data?</string>
    <string name="yesDeleteDialog">Yes</string>
    <string name="noDeleteDialog">No</string>
    <string name="dataDeleted">All data deleted successfully</string>
    <string name="importSucceded">Data imported successfully</string>
    <string name="importFailed">Failed to import data</string>
    <string name="bar_code">Bar Code:</string>
    <string name="activity_intent_filter_action">com.FlowScan.ACTION</string>
    <string name="datawedge_intent_data_String">com.symbol.datawedge.data_string</string>
    <string name="waiting_for_scan">Waiting for scan</string>
    <string name="show_the_data">Show the Data</string>
    <string name="no_data_found">No Data Found</string>
    <string name="data_desc">Description: </string>
    <string name="data_cat">Category: </string>
    <string name="data_stat">Status: </string>
    <string name="data_loc">Location: </string>
    <string name="welcome">Hello </string>
</resources>