<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/login"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textAlignment="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@drawable/edittext_background"
        android:elevation="6dp"
        android:translationZ="7dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textAlignment="center"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_background"
        android:elevation="6dp"
        android:translationZ="7dp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:backgroundTint="@color/button_background"
        android:elevation="12dp"
        android:translationZ="7dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <ImageView
        android:id="@+id/icon_arabic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/arabic"
        android:text="@string/ic_arabic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/icon_english"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/english"
        app:layout_constraintEnd_toStartOf="@id/icon_arabic"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>