<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dataDisplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".menuPages.DataDisplayActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
    <TextView
        android:id="@+id/pagename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_display"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/contetPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_nav_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBarCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >

        <TextView
            android:id="@+id/labelBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_code"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/showBarCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/waiting_for_scan"
            android:textSize="20sp"
            android:minHeight="48dp"
            android:textColor="@color/black"
            tools:ignore="HardcodedText,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <Button
        android:id="@+id/btnInquiry"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/show_the_data"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_background2"
        android:elevation="200dp"
        android:translationZ="25dp"
        app:layout_constraintTop_toBottomOf="@id/linearBarCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dataShown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnInquiry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>