<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

        <TextView
        android:id="@+id/pagename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_gravity="center"
        tools:ignore="HardcodedText" />

    </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/contetPage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_nav_background"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


        </LinearLayout>

        <Button
            android:id="@+id/btnDataDisplay"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/button_background2"
            android:elevation="200dp"
            android:translationZ="25dp"
            android:text="@string/data_display"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_data_display_32px"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnImport"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/button_background2"
            android:elevation="200dp"
            android:translationZ="25dp"
            android:text="@string/import_data"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_import_32px"
            app:layout_constraintTop_toBottomOf="@id/btnDataDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnDeleteAll"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:text="@string/delete_all"
            android:backgroundTint="@color/button_background2"
            android:elevation="200dp"
            android:translationZ="25dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_delete_32px"
            app:layout_constraintTop_toBottomOf="@id/btnImport"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/icon_arabic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/arabic"
                android:text="@string/ic_arabic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon_english"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/english"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>